--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Exclure absolument tous les fichiers/dossiers
 LiDAR_TER/donneesLiDAR.csv
 /grid/__pycache__
-grid/PFE.gpkg
+PFE.gpkg
 grid/poly.gpkg
 grid/gif.py
 Points_UE_Duchesnay/
