--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,8 @@ LiDAR_TER/donneesLiDAR.csv
 /grid/__pycache__
 PFE.gpkg
 grid/poly.gpkg
-grid/gif.py
 Points_UE_Duchesnay/
+extract_mp_id.ipynb
+result.csv
+.jupyter/
+/grid/.ipynb_checkpoints
